Fix up pypi provides and requires

--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = https://files.pythonhosted.org/packages/fc/62/c27db771f954cd44084aecbea28f
 archives = 
 giturl = https://github.com/msgpack-rpc/msgpack-rpc.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
